# building_mgmt

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: __init__.py  apps.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
docker/dev/: Dockerfile  docker-compose.yml
env/: .env.example
modules/common/: admin.py  apps.py  cookie_auth.py  models.py
modules/common/migrations/: 0001_initial.py  0002_alter_contentview_user.py  0003_alter_contentview_user.py  0004_alter_contentview_content_type.py
modules/issues/: apps.py
modules/posts/: apps.py
modules/profiles/: admin.py  apps.py  models.py  signals.py
modules/profiles/migrations/: 0001_initial.py  0002_alter_profile_phone_number.py
modules/ratings/: apps.py
modules/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
modules/users/migrations/: 0001_initial.py
