[project]
name = "building-mgmt"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Dass",email = "65924137+ben-dass@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
